--- a/index.html
+++ b/index.html
@@ -27,14 +27,13 @@
   <script type="importmap">
 {
   "imports": {
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.21.0",
-    "react/": "https://aistudiocdn.com/react@^19.1.1/",
-    "react": "https://aistudiocdn.com/react@^19.1.1",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
+    "@google/genai": "https://esm.sh/@google/genai@0.14.2",
+    "react": "https://esm.sh/react@18.2.0",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
     "jspdf": "https://esm.sh/jspdf@2.5.1",
     "docx": "https://esm.sh/docx@8.5.0",
     "mammoth": "https://esm.sh/mammoth@1.7.2",
-    "pdfjs-dist": "https://esm.sh/pdfjs-dist@4.4.168"
+    "pdfjs-dist": "https://esm.sh/pdfjs-dist@4.4.168",
   }
 }
 </script>
@@ -48,11 +47,9 @@
 </script>
 <!-- Babel for in-browser JSX/TSX transpilation -->
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-gray-50 dark:bg-gray-900">
     <div id="root"></div>
     <script type="text/babel" data-type="module" src="./index.tsx"></script>
-  <script type="module" src="/index.tsx"></script>
-</body>
+  </body>
 </html>
