--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     "docx": "https://esm.sh/docx@8.5.0",
     "mammoth": "https://esm.sh/mammoth@1.7.2",
     "pdfjs-dist": "https://esm.sh/pdfjs-dist@4.4.168",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
+    "react/": "https://aistudiocdn.com/react@^19.1.1/"
   }
 }
 </script>
@@ -50,6 +52,6 @@
 </head>
   <body class="bg-gray-50 dark:bg-gray-900">
     <div id="root"></div>
-    <script type="text/babel" data-type="module" src="./index.tsx"></script>
+<script type="text/babel" data-presets="react,typescript" data-type="module" src="./index.tsx"></script>
   </body>
 </html>
