--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     "jspdf": "https://esm.sh/jspdf@2.5.1",
     "docx": "https://esm.sh/docx@8.5.0",
     "mammoth": "https://esm.sh/mammoth@1.7.2",
-    "pdfjs-dist": "https://esm.sh/pdfjs-dist@4.4.168",
-    
+    "pdfjs-dist": "https://esm.sh/pdfjs-dist@4.4.168"
+  }
 }
 </script>
 <script>
