--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     "jspdf": "https://esm.sh/jspdf@2.5.1",
     "docx": "https://esm.sh/docx@8.5.0",
     "mammoth": "https://esm.sh/mammoth@1.7.2",
-    "pdfjs-dist": "https://esm.sh/pdfjs-dist@4.4.168"
+    "pdfjs-dist": "https://esm.sh/pdfjs-dist@4.4.168",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
+    "react/": "https://aistudiocdn.com/react@^19.1.1/"
   }
 }
 </script>
